## useful flags
##AM_CFLAGS = -g -Wall -ansi -pedantic -I../src -I../src/support @CHECK_CFLAGS@
##LIBS = @CHECK_LIBS@
##LDADD = ../src/librapi.la

##TESTS = test-internals

##check_PROGRAMS = $(TESTS) test-socket test-server

##test_internals_SOURCES = test-internals.c

SUBDIRS = CeRapiInvoke rapi
##rapi .
