SUBDIRS = ARMRel MIPSRel SH3Rel

EXTRA_DIST = \
	encoder.cpp encoder.h \
	huffmanencoder.cpp huffmanencoder.h \
	screensnap.cpp \
	snap.cpp snap.h \
	xorencoder.cpp xorencoder.h \
	eventprocessor.cpp eventprocessor.h \
	rleencoder.cpp rleencoder.h \
	serversocket.cpp serversocket.h \
	vnckeymap.cpp vnckeymap.h \
	keysymdef.h \
	screensnap.vcp \
	screensnap.vcw
